--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   color: #333;
   width: 100%;
-  background:url("../img/temp_bkgrnd.jpg") no-repeat top center;
+  background:url("../img/bkgrnd.jpg") no-repeat top center;
   margin-bottom: 1em;
 }
 .site-body-column {
