--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,17 @@ body::before {
 /* @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic|EB+Garamond); */
 
 
+/* Clearfix modern */
+.clearfix:before,
+.clearfix:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+.clearfix:after {
+    clear: both;
+}
+
+
 
 /** LAYOUT **/
 body {
@@ -67,13 +78,53 @@ body {
     margin-top: 5em;
   }
 }
-.quotes-wrap {
+
+.gallery-wrap {
+  background-color: #f4f3f3;
+}
+.site-body-gallery {
+  margin-top: 3em;
+  padding: 1em 2em;
+}
+  .my-gallery figure {
+    /* float:left; */
+    margin: 0 0 2em;
+    text-align: center;
+  }
+  .my-gallery figure img {
+    display: block;
+    margin: 0 auto;
+  }
+  .my-gallery figcaption {
+    margin: 0.5em auto 1em;
+  }
+  /* desktop */
+  @media (min-width: 992px ) {
+
+  }
+  @media (max-width: 767px) and (orientation: portrait) {
+    .my-gallery figure img {
+      width: 90%;
+    }
+  }
+
+.media-wrap {
   background-color: #e7e7e7;
 }
+.site-body-media {
+  padding: 1em 2em 2em;
+}
+
+.quotes-wrap {
+  /* background-color: #e7e7e7; */
+  background-color: #d1d0d0
+}
 .site-body-quotes {
-  margin-top: 3em;
+  /* margin-top: 3em; */
   padding: 1em 2em 0;
 }
+
+
 .author-wrap {
   background-color: #002e62;
 }
@@ -152,7 +203,7 @@ h2, .h2 {
 .cbp-qtrotator .cbp-qtcontent {
     position: absolute;
     min-height: 200px;
-    padding: 3em 3em;
+    padding: 2.3em 3em 3em;
     top: 0;
     z-index: 0;
     opacity: 0;
@@ -191,5 +242,11 @@ h2, .h2 {
 
 
 @media (max-width: 767px) {
+
+}
+
+
+body .pswp__caption__center {
+  text-align: center;
 
 }
